Added the steps to make the dish

--- a/recipes/champorado.html
+++ b/recipes/champorado.html
@@ -19,6 +19,10 @@
         <li>1/2 cup sugar</li>
         <li>3 1/2 cups water</li>
         <li>condensed milk <B>optional</B></li>
+        <p>How to make it:</p>
+        <ol>
+            <li></li>
+        </ol>
     </ul>
 </body>
 </html>
