Add index.html. Ignore champorado.html as it has already been added, and ignore champorado.jpg

--- a/recipes/champorado.html
+++ b/recipes/champorado.html
@@ -21,7 +21,12 @@
         <li>condensed milk <B>optional</B></li>
         <p>How to make it:</p>
         <ol>
-            <li></li>
+            <li>Pour 2 1/2 cups of water in a pot and bring to a boil</li>
+            <li>Put-in the glutinous rice and allow water to re-boil for a few minutes</li>
+            <li>Dilute the cocoa powder in 1 cup warm water then pour-in the pot. Stir continuously</li>
+            <li>Once the glutinous rice is cooked (about 12 to 18 minutes of cooking with constant stirring), add the sugar and cook for another 5 minutes or until the texture becomes thick</li>
+            <li>Remove from the pot and place in a serving bowl.</li>
+            <li>Serve hot with a swirl of condensed milk on top.</li>
         </ol>
     </ul>
 </body>
