Added the ingredients list to Spaghetti recipe

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -8,9 +8,27 @@
 </head>
 <body>
     <h1>Spaghetti Recipe</h1>
+    <img src="spaghetti.jpg">
     <h2>Description:</h2>
     <p>Filipino-style spaghetti is an interesting take on the Italian bolognese. 
-        Made with banana catsup and hot dogs, it’s not your ordinary pasta dish! </p>
-        <p>It’s meaty, perfectly sweet and savory, and cheesy for the ultimate midday snack or main dish.</p>
+        Made with banana ketchup and hot dogs, it strays quite a bit from the norms of other pasta dishes. </p>
+        <p>It's got a lot of meat, and is sweet and savoury. It's a perfect dish to munch on anytime you're hungry</p>
+        <p>Here is the list of ingredients needed to make this wonderful dish (8 servings):</p>
+        <ul>
+            <li>1 pound uncooked spaghetti</li>
+            <li>1 tablespoon oil</li>
+            <li>4 Filipino-style hotdogs, sliced diagonally</li>
+            <li>1 onion, peeled and chopped</li>
+            <li>3 cloves garlic, peeled and minced</li>
+            <li>1 bell pepper, seeded, cored and chopped</li>
+            <li>1 pound ground beef</li>
+            <li>2 cups tomato sauce</li>
+            <li>1/2 cup tomato paste</li>
+            <li>1 cup banana ketchup, preferably sweet and spicy</li>
+            <li>1 cup beef broth</li>
+            <li>1 teaspoon sugar</li>
+            <li>salt and pepper to taste</li>
+            <li>1/2 cup quick-melt cheese, shredded</li>
+        </ul>
 </body>
 </html>
