Added Spaghetti recipe to the index page and finished off the spaghetti page wuth the steps to make the dish

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -30,5 +30,17 @@
             <li>salt and pepper to taste</li>
             <li>1/2 cup quick-melt cheese, shredded</li>
         </ul>
+        <p>And now, here are the instructions to make the dish:</p>
+        <ol>
+            <li>In a pot over medium heat, cook spaghetti in salted boiling water according to package’s direction for about 7 to 9 minutes or until firm to bite. Drain well.</li>
+            <li>In a large saucepan, heat oil. Add sliced hot dogs and cook, stirring occasionally, for about 1 to 2 minutes or until lightly browned. Remove from pan and set aside.</li>
+            <li>Add onions, garlic, and bell peppers to pan. Cook until softened. </li>
+            <li>Add ground beef and cook, stirring occasionally and breaking into small pieces until lightly browned. Drain any excess fat.</li>
+            <li>Add tomato sauce, tomato paste, ketchup, and beef broth. Stir in sugar.</li>
+            <li>Bring to a boil and then lower heat to simmer, covered, for about one hour or until meat is fully cooked and sauce is thickened. 
+                If the sauce is getting too thick, add water in 1/2 cup increments as needed. </li>
+            <li>During the last 10 minutes of cooking, add browned hot dogs. Season with salt and pepper to taste.</li>
+            <li>To serve, spoon spaghetti sauce over noodles and top with shredded cheese.</li>
+        </ol>
 </body>
 </html>
