--- a/recipes/puto.html
+++ b/recipes/puto.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Puto Recipe</h1>
+    <img src="puto.jpg">
     <h2>Description:</h2>
     <p>Puto is a filipino rice cake, normally made from slightly fermented rice dough.</p>
     <p>It is served alongside savoury dishes, which complement each other very well</p>
@@ -21,5 +22,17 @@
         <li>3/4 cup shredded sharp cheddar cheese</li>
         <li>5 cups water for steaming</li>
     </ul>
+    <p>And now for the instructions to make this dish:</p>
+    <ol>
+        <li>Pour the water into a steamer or cooking pot. Let boil.</li>
+        <li>Sift flour, sugar, and baking powder. Combine in a bowl. Mix well.</li>
+        <li>Gradually add the milk while stirring. Continue to stir until the texture of the mixture becomes smooth.</li>
+        <li>Stir-in the vanilla extract and half of the cheese.</li>
+        <li>Pour the mixture into small to medium sized molds. Arrange in a steamer. Cover and steam for 25 minutes. Top each puto with the remaining cheese. Steam for 5 minutes more.</li>
+        <li>Take the steamed cheese puto out of the steamer. Let it cool down.</li>
+        <li>Gently remove the puto from the mold with the help of a spatula.</li>
+        <li>Arrange in serving plate. Serve.</li>
+        <li>Share and enjoy!</li>
+    </ol>
 </body>
 </html>
