--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1><br>
-    <a href="recipes/champorado.html">Champorado Recipe</a>
-    <a href="recipes/spaghetti.html">Spaghetti Recipe</a>
-    <a href="recipes/puto.html">Puto Recipe</a>
+    <ul>
+        <li><a href="recipes/champorado.html">Champorado Recipe</a></li>
+        <li><a href="recipes/spaghetti.html">Spaghetti Recipe</a></li>
+        <li><a href="recipes/puto.html">Puto Recipe</a></li>
+    </ul>
 </body>
 </html>
